Add more and better text / articles.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #888;
-		font-family: "Lato", sans-serif;
+		font-family: Verdana, sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
 		line-height: 1.75em;
@@ -1791,9 +1791,7 @@ input, select, textarea {
 
 		header.major h2 + p {
 			color: #777;
-			font-size: 1.75em;
-			font-weight: 700;
-			margin-top: -0.75em;
+			margin-top: -1em;
 		}
 
 /* Form */
@@ -2396,6 +2394,7 @@ input, select, textarea {
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
+		text-align: center;
 	}
 
 		ul.icons li {
@@ -2409,6 +2408,10 @@ input, select, textarea {
 
 			ul.icons li .icon:before {
 				font-size: 1.25em;
+			}
+			.icons .icon {
+				font-size: 1.5em;
+				color: #4acaa8;
 			}
 
 /* Table */
@@ -2663,8 +2666,8 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		background: url('images/banner.jpg') no-repeat center center/cover #444;
-		height: 20em;
+		background: url('../../images/banner.jpg') no-repeat center center/cover #444;
+		height: 16em;
 		width: 100%;
 		color: #d2f2e9;
 	}
@@ -2696,7 +2699,7 @@ input, select, textarea {
 			justify-content: center;
 			align-items: center;
 			display: flex;
-			padding: 3em;
+			height: 100%;
 		}
 
 			#header > header .avatar {
@@ -2714,8 +2717,10 @@ input, select, textarea {
 			}
 
 			#header > header p {
+				background: #343434;
+				display: inline;
+				padding: .4em;
 				color: #d2f2e9;
-				font-style: italic;
 				margin: 1em 0 0 0;
 			}
 
@@ -2729,9 +2734,6 @@ input, select, textarea {
 
 				#header > footer .icons li a {
 					color: #b7eadc;
-				}
-				#header .icon {
-					font-size: 1.5em;
 				}
 
 /* Wrapper */
@@ -2926,7 +2928,6 @@ input, select, textarea {
 		/* Header */
 
 					#header > header .avatar {
-						margin: 0 auto 1.6875em auto;
 						width: 6em;
 					}
 
